; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_hue.c_apply_luma_lut.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_hue.c_apply_luma_lut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i64*, i32, i64*, i32, i32, i32)* @apply_luma_lut to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apply_luma_lut(%struct.TYPE_3__* %0, i64* %1, i32 %2, i64* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %8, align 8
  store i64* %1, i64** %9, align 8
  store i32 %2, i32* %10, align 4
  store i64* %3, i64** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  br label %16

16:                                               ; preds = %43, %7
  %17 = load i32, i32* %14, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %14, align 4
  %19 = icmp ne i32 %17, 0
  br i1 %19, label %20, label %52

20:                                               ; preds = %16
  store i32 0, i32* %15, align 4
  br label %21

21:                                               ; preds = %40, %20
  %22 = load i32, i32* %15, align 4
  %23 = load i32, i32* %13, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %43

25:                                               ; preds = %21
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i64*, i64** %27, align 8
  %29 = load i64*, i64** %11, align 8
  %30 = load i32, i32* %15, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i64, i64* %29, i64 %31
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds i64, i64* %28, i64 %33
  %35 = load i64, i64* %34, align 8
  %36 = load i64*, i64** %9, align 8
  %37 = load i32, i32* %15, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i64, i64* %36, i64 %38
  store i64 %35, i64* %39, align 8
  br label %40

40:                                               ; preds = %25
  %41 = load i32, i32* %15, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %15, align 4
  br label %21

43:                                               ; preds = %21
  %44 = load i32, i32* %12, align 4
  %45 = load i64*, i64** %11, align 8
  %46 = sext i32 %44 to i64
  %47 = getelementptr inbounds i64, i64* %45, i64 %46
  store i64* %47, i64** %11, align 8
  %48 = load i32, i32* %10, align 4
  %49 = load i64*, i64** %9, align 8
  %50 = sext i32 %48 to i64
  %51 = getelementptr inbounds i64, i64* %49, i64 %50
  store i64* %51, i64** %9, align 8
  br label %16

52:                                               ; preds = %16
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
